--- a/seccion-gatos.html
+++ b/seccion-gatos.html
@@ -64,9 +64,9 @@
                             <h2>
                                 Gatos
                             </h2> 
-                            <!-- ****************************AGREGAMOS COMBOBOX******************************************* -->
+                            <!-- ****************************AGREGAMOS COMBOBOX GATOS******************************************* -->
                         <div class="form-group">
-                            <label for="exampleFormControlSelect1">Raza</label>
+                            <label for="exampleFormControlSelect">Raza</label>
                             <select class="form-control" id="cmb_gatos">
                               <option value="0">-- Seleccione una raza --</option>
                               <option value="1">Cualquiera</option>
