--- a/seccion-perros.html
+++ b/seccion-perros.html
@@ -66,9 +66,9 @@
                         <h2>
                             Perros
                         </h2> 
-                        <!-- ****************************AGREGAMOS COMBOBOX******************************************* -->
+                        <!-- ****************************AGREGAMOS COMBOBOX PERROS******************************************* -->
                         <div class="form-group">
-                            <label for="exampleFormControlSelect1">Raza</label>
+                            <label for="exampleFormControlSelect">Raza</label>
                             <select class="form-control" id="cmb_perros">
                               <option value="0">-- Seleccione una raza --</option>
                               <option value="1">Cualquiera</option>
