--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                         
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+                    <div class='col-md-12 text-right'>
+                        <a href="registro.html"> <button type="button" class="btn btn-warning">
+                            Registrarse </button> </a>
+                        <a href="registro.html"> <button type="button" class="btn btn-info">
+                            Iniciar Sesion </button> </a>     
+                    </div>
                 </ul>
             </nav>
             <main class="flex-fill">
@@ -68,8 +74,9 @@
                         <section>
                             <h3>Integrantes</h3>
                             <ul>
-                                <li>Nombre Integrante 1</li>
-                                <li>Nombre Integrante 2</li>
+                                <li>Cristian Savaria Monsalve</li>
+                                <li>Daniela Errazuriz Sandoval</li>
+                                <li>Marcelo Morales Cancino</li>
                             </ul>
                         </section>
                     </div>
