--- a/formulario-enviado.html
+++ b/formulario-enviado.html
@@ -54,6 +54,12 @@
                     <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+                    <div class='col-md-12 text-right'>
+                        <a href="registro.html"> <button type="button" class="btn btn-warning">
+                            Registrarse </button> </a>
+                        <a href="registro.html"> <button type="button" class="btn btn-info">
+                            Iniciar Sesion </button> </a>     
+                    </div>
                 </ul>
             </nav>            
             <main class="flex-fill">
