--- a/seccion-gatos.html
+++ b/seccion-gatos.html
@@ -55,6 +55,13 @@
                         
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+
+                    <div class='col-md-12 text-right'>
+                        <a href="registro.html"> <button type="button" class="btn btn-warning">
+                            Registrarse </button> </a>
+                        <a href="registro.html"> <button type="button" class="btn btn-info">
+                            Iniciar Sesion </button> </a>     
+                    </div>
                 </ul>
             </nav>
             <main class="flex-fill">            
