--- a/seccion-perros.html
+++ b/seccion-perros.html
@@ -60,7 +60,7 @@
                     <div class='col-md-12 text-right'>
                         <a href="registro.html"> <button type="button" class="btn btn-warning">
                             Registrarse </button> </a>
-                        <a href="registro.html"> <button type="button" class="btn btn-info">
+                        <a href="login.html"> <button type="button" class="btn btn-info">
                             Iniciar Sesion </button> </a>     
                     </div>
                 </ul>
