--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,7 @@
             <nav class="navbar navbar-expand-md bg-light">
                 
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.png" class="rounded-circle" width="80" alt="Logo" />
+                    <img src="img/logo.png" class="rounded-circle" alt="Logo" />
                 </a>
 
                 <!-- Links -->
@@ -51,13 +51,6 @@
                     <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
-
-                    <div class='col-md-12 text-right'>
-                        <a href="registro.html"> <button type="button" class="btn btn-warning">
-                            Registrarse </button> </a>
-                        <a href="registro.html"> <button type="button" class="btn btn-info">
-                            Iniciar Sesion </button> </a>     
-                    </div>
                 </ul>
             </nav>
 
