--- a/login-exitoso.html
+++ b/login-exitoso.html
@@ -10,7 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script src="js/registro-login.js"></script>
+        <script src="js/validacion-inicio-sesion.js"></script> <!-- asociar a validacion login -->
     </head>
     <body>
         <div class="container bg-light d-flex flex-column sticky-footer-wrapper min-vh-100">
@@ -20,12 +20,6 @@
                     <img src="img/logo.png" class="rounded-circle" alt="logo"/>
                     <span class="text-nowrap">ONG Ayuda a un Peludo</span>
                 </h1>
-                <p class="text-justify">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Aliquam repellat earum fuga? Nihil adipisci in ut labore nobis,
-                    earum eos possimus ex eum eveniet delectus suscipit mollitia perspiciatis, 
-                    repellat vitae!
-                </p>
             </header>
 
             <nav class="navbar navbar-expand-md bg-light">
@@ -59,10 +53,8 @@
             </nav>            
             <main class="flex-fill">
                 <section>
-                    <h2>Contacto</h2>
-                    
                     <div class="alert alert-success" role="alert">
-                        Se a registrado exitosamente
+                        Ingreso de forma exitosa
                     </div> 
                 </section> 
             </main>
