--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--***********<!DOCTYPE html>
 <html lang="es">
     <head>
         <title>ONG Ayuda a un peludo</title>
@@ -31,13 +31,13 @@
                     <img src="img/logo.png" class="rounded-circle" width="80" alt="Logo" />
                 </a>
 
-                <!-- Links -->
+                <!-- Links***
                 <ul class="navbar-nav">
                     <li class="nav-item">
                     <a class="nav-link" href="index.html">Inicio</a>
                     </li>
 
-                    <!-- Dropdown -->
+                    <!-- Dropdown ***
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                             Mascotas
@@ -63,7 +63,7 @@
             <main class="flex-fill">
                 <section>
                     <h2>INICIAR SESION</h2>
-                    <div class="form-group"><!-- POR EL ID : formulario-contacto se hacen las validaciones -->
+                    <div class="form-group"><!-- POR EL ID : formulario-contacto se hacen las validaciones ***
                         <form id="login" name="login" action="login-exitoso.html" method="POST" >
 
                                 <div class="col-md-6 offset-md-3">
