--- a/registro.html
+++ b/registro.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- **********<!DOCTYPE html>
 <html lang="es">
     <head>
         <title>ONG Ayuda a un peludo</title>
@@ -29,15 +29,15 @@
                 
                 <a class="navbar-brand" href="#">
                     <img src="img/logo.png" class="rounded-circle" width="80" alt="Logo" />
-                </a>
+                </a> -->
 
-                <!-- Links -->
+                <!-- Links ****
                 <ul class="navbar-nav">
                     <li class="nav-item">
                     <a class="nav-link" href="index.html">Inicio</a>
                     </li>
 
-                    <!-- Dropdown -->
+                    <!-- Dropdown *****
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                             Mascotas
@@ -62,7 +62,7 @@
             <main class="flex-fill">
                 <section>
                     <h2>REGISTRO</h2>
-                    <div class="form-group"><!-- POR EL ID : formulario-contacto se hacen las validaciones -->
+                    <div class="form-group"><!-- POR EL ID : formulario-contacto se hacen las validaciones ******
                         <form id="registro" name="registro" action="login-exitoso.html" method="POST" >
 
                             
